# music2bin

./: COPYRIGHT  Cargo.toml  LICENSE  README.md
src/: bin_decoder.rs  bin_encoder.rs  bin_to_xml.rs  cli_handlers.rs  decoder.rs  encoder.rs  error.rs  layout.rs  main.rs  measure_checker.rs  music_xml_types.rs  notation.rs  repl_funcs.rs  utils.rs  xml_elem_handlers.rs  xml_multipart.rs  xml_ser.rs  xml_to_bin.rs
src/bin_format/: bin_decoder.rs  bin_encoder.rs  bin_to_ir.rs  ir_to_bin.rs  mod.rs
src/ir/: ir_to_xml.rs  measure_checker.rs  mod.rs  multipartxml_to_ir.rs  musical_part.rs  muxml_parser.rs  notation.rs  part_map.rs  xml_to_ir.rs
test/: arabesque.xml  clairdelune.xml  fantaisie.xml  frelise.musicxml  hardmeasures.xml  libestraum3.musicxml  multipart_pathetique.musicxml  onestaff_score.musicxml  problem_measure.xml  simple.musicxml  single_measure.musicxml  slursingle.musicxml
