[package]
authors = ["Robert Bermani"]
license-file = "COPYRIGHT"
name = "xmlmusicencoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout ={ version = "3.1.3", features = ["std"] }
bitfield = "0.14.0"
failure = "0.1.8"
nom = "7.1.3"
num-derive = "0.4.0"
num-traits = "0.2.16"
png = "0.17.9"
quick-xml = { version = "0.30.0", features = ["serialize"] }
roxmltree = "0.18.0"
serde = { version = "1.0.181", features = ["derive"] }
structopt = "0.3.26"
