[package]
authors = ["Robert Bermani"]
license-file = "LICENSE"
name = "music2bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout ={ version = "3.1.3", features = ["std"] }
bitfield = "0.14.0"
env_logger = "0.10.0"
log = "0.4.20"
nom = "7.1.3"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
png = "0.17.9"
structopt = "0.3.26"
thiserror = "1.0.49"
muxml = { git = "https://github.com/rbermani/muxml-rust.git", branch = "main" }
mulib = { git = "https://github.com/rbermani/mulib-rust.git", branch = "main" }
#muxml = { path = "../muxml-rust" }
#mulib = { path = "../mulib-rust" }
roxmltree = "0.19"
strum = { version = "0.25.0", features = ["derive"]}
fraction = "0.14.0"
repl-rs = "0.2.8"
