[package]
authors = ["Robert Bermani"]
license-file = "LICENSE"
name = "music2bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout ={ version = "4.0.2", features = ["std"] }
bitfield = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
nom = "7.1.3"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
png = "0.17.13"
structopt = "0.3.26"
thiserror = "1.0.61"
muxml = { git = "https://github.com/rbermani/muxml-rust.git", branch = "main" }
mulib = { git = "https://github.com/rbermani/mulib-rust.git", branch = "main" }
#muxml = { path = "../muxml-rust" }
#mulib = { path = "../mulib-rust" }
roxmltree = "0.20"
strum = { version = "0.26.3", features = ["derive"]}
fraction = "0.15.3"
repl-rs = "0.2.8"
